@@ -72,6 +72,7 @@
     <dependency org="org.codehaus.jackson" name="jackson-core-asl" rev="${jackson.version}"
       conf="compile->master"/>
     <dependency org="joda-time" name="joda-time" rev="${joda-time.version}" conf="compile->master"/>
+    <dependency org="com.google.guava" name="guava" rev="${guava.version}" conf="compile->master" />
 	<dependency org="org.python" name="jython" rev="${jython.version}" conf="compile->master"/>
     <!--ATM hbase, hbase-test.jar, hadoop.jar are resolved from the lib dir--> 	
     <dependency org="hsqldb" name="hsqldb" rev="${hsqldb.version}"
