@@ -30,7 +30,6 @@
           http://www.ibiblio.net/pub/packages/maven2
   -->
   <property name="repo.maven.org" value="http://repo1.maven.org/maven2/" override="false"/>
-  <property name="snapshot.apache.org" value="http://people.apache.org/repo/m2-snapshot-repository/" override="false"/>
   <property name="maven2.pattern"  value="[organisation]/[module]/[revision]/[module]-[revision]"/> 
   <property name="maven2.pattern.ext" value="${maven2.pattern}.[ext]"/>
   <!-- pull in the local repository -->
@@ -38,7 +37,6 @@
   <settings defaultResolver="default"/>
   <resolvers>
     <ibiblio name="maven2" root="${repo.maven.org}" pattern="${maven2.pattern.ext}" m2compatible="true"/>
-    <ibiblio name="apache-snapshot" root="${snapshot.apache.org}" pattern="${maven2.pattern.ext}" m2compatible="true"/>
     <chain name="default" dual="true">
       <resolver ref="local"/>
       <resolver ref="maven2"/>
@@ -48,10 +46,6 @@
     </chain>
     <chain name="external">
       <resolver ref="maven2"/>
-    </chain>
-    <chain name="external-and-snapshots">
-      <resolver ref="maven2"/>
-      <resolver ref="apache-snapshot"/>
     </chain>
   </resolvers>
   <modules>
