@@ -22,9 +22,8 @@ commons-cli.version=1.0
 commons-logging.version=1.0.3
 checkstyle.version=4.2
 
+ivy.version=2.2.0-rc1
 hsqldb.version=1.8.0.10
-
-ivy.version=2.0.0-rc2
 
 javacc.version=4.2
 jline.version=0.9.94
@@ -39,3 +38,4 @@ xerces.version=1.4.4
 jackson.version=1.0.1
 joda-time.version=1.6
 jython.version=2.5.0
+guava.version=r06
