@@ -100,6 +100,11 @@
 	    <artifactId>jython</artifactId>
 	    <version>${jython.version}/version>
 	</dependency>
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
+    </dependency>
 
   </dependencies> 
 </project>
